# cm_detect

./: CMakeLists.txt  package.xml
src/: cm_clustering.cpp  cm_clustering_0612.cpp  cm_detect.cpp  cm_move_base.cpp  cm_tf.cpp
yolov5_pytorch_ros/: CMakeLists.txt  package.xml
yolov5_pytorch_ros/launch/: detector.launch
yolov5_pytorch_ros/src/: cm_clustering.cpp  cm_detect.cpp  cm_detect_0612.cpp  detect.py  simple_navigation_goals.cpp
yolov5_pytorch_ros/src/models/: common.py
